--- a/index.html
+++ b/index.html
@@ -2,29 +2,45 @@
 
 <head>
     <style>
-
         .card {
-            width:100px;
-            min-height:100px;
-            padding:10px;
-            text-align:center;
+            width: 100px;
+            min-height: 100px;
+            padding: 10px;
+            text-align: center;
             background: rgb(255, 234, 177);
-            border:solid 1px black;
-            margin:auto;
+            border: solid 1px black;
+            margin: auto;
+            position: relative;
         }
 
-        .cardwrap {
-            display:inline;
+        .card-row {
+            margin: auto;
+            margin-top: 40px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            position: relative;
         }
 
-        .row {
-            margin:auto;
-            margin-top:20px;            
-            display:flex;
-            justify-content:center;
-            gap:20px;
+        .card-row .card:before {
+            position: absolute;
+            top: -20px;
+            right: 50%;
+            width: 1px;
+            height: 20px;
+            border-right: solid 1px black;
+            content: ' ';
         }
-        
+
+        .card:after {
+            position: absolute;
+            bottom: -20px;
+            right: 50%;
+            width: 1px;
+            height: 20px;
+            border-right: solid 1px black;
+            content: ' ';
+        }
     </style>
 </head>
 
@@ -35,39 +51,44 @@
         let root = document.getElementById("root");
         let card = document.createElement("div");
         let content = {
-            text: "1",
+            text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas.",
             children: [
                 {
                     text: "1.1",
-                    children:[
+                    children: [
                         {
-                            text:"1.1.1"
+                            text: "1.1.1"
                         },
                         {
-                            text:"1.1.2"
+                            text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas."
                         },
                         {
-                            text:"1.1.3"
+                            text: "1.1.3",
+                            children:[
+                                {
+                                    text:"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas."
+                                }
+                            ]
+                            
                         }
-                    ]                    
+                    ]
                 },
                 {
-                    text: "1.2"
+                    text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas."
                 }
             ]
         }
 
         function toCard(root) {
             let wrap = document.createElement("div");
-            wrap.classList = "cardwrap"
             let text = document.createElement("div");
             text.classList = "card"
             text.textContent = root.text;
             let row = document.createElement("div");
-            row.classList = "row";
+            row.classList = "card-row";
             wrap.append(text);
             wrap.append(row);
-            if(!!root.children){
+            if (!!root.children) {
                 root.children.forEach(child => {
                     row.append(toCard(child))
                 });
