--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         .card {
-            width: 100px;
+            width: 150px;
             min-height: 100px;
             padding: 10px;
             text-align: center;
@@ -22,19 +22,28 @@
             position: relative;
         }
 
+        .card-row:after {
+            position: absolute;
+            width: 100%;
+            content: ' ';
+            height: 1px;
+            background: black;
+            top: -20px;
+        }
+
         .card-row .card:before {
             position: absolute;
             top: -20px;
             right: 50%;
-            width: 1px;
-            height: 20px;
+            height: 18px;
             border-right: solid 1px black;
+            border-top: solid 2px black;
             content: ' ';
         }
 
         .card:after {
             position: absolute;
-            bottom: -20px;
+            bottom: -21px;
             right: 50%;
             width: 1px;
             height: 20px;
@@ -60,16 +69,24 @@
                             text: "1.1.1"
                         },
                         {
-                            text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas."
+                            text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas.",
+                            children: [
+                                {
+                                    text: "A"
+                                },
+                                {
+                                    text: "B"
+                                }
+                            ]
                         },
                         {
                             text: "1.1.3",
-                            children:[
+                            children: [
                                 {
-                                    text:"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas."
+                                    text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas."
                                 }
                             ]
-                            
+
                         }
                     ]
                 },
