--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <style>
-        td {
-            width: 150px;
+        .card-content {
+            width: 120px;
             min-height: 100px;
             padding: 10px;
             text-align: center;
@@ -11,6 +11,14 @@
             border: solid 1px black;
             margin: auto;
             position: relative;
+        }
+
+        table {
+            border: solid 1px red;
+        }
+
+        td {
+            align-content:baseline;
         }
         
     </style>
@@ -32,13 +40,13 @@
                             text: "1.1.1"
                         },
                         {
-                            text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas.",
+                            text: "1.1.2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas.",
                             children: [
                                 {
-                                    text: "A"
+                                    text: "1.1.2.1 A"
                                 },
                                 {
-                                    text: "B"
+                                    text: "1.1.2.2 B"
                                 }
                             ]
                         },
@@ -46,7 +54,7 @@
                             text: "1.1.3",
                             children: [
                                 {
-                                    text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas."
+                                    text: "1.1.3.1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas."
                                 }
                             ]
 
@@ -54,20 +62,26 @@
                     ]
                 },
                 {
-                    text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas."
+                    text: "1.2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas."
                 }
             ]
         }
 
         function toCard(root) {
+            let card = document.createElement("div");
+            card.textContent = root.text;
+            card.classList="card-content";
+            if(!root.children){
+                return card;
+            }
             let table = document.createElement("table");
             let body = document.createElement("tbody");
             let row = document.createElement("tr");
-            let cell = document.createElement("td");
-            cell.textContent = root.text;
+            let cell = document.createElement("td");                        
             if (!!root.children) {
                 cell.colSpan = root.children.length;
             }
+            cell.append(card);
             row.append(cell);
             body.append(row);
             if (!!root.children) {
