--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         .card-content {
             width: 120px;
             min-height: 100px;
-            padding: 10px;
+            padding: 20px 10px 10px 10px;
             text-align: center;
             background: rgb(255, 234, 177);
             border-radius: 5px;
@@ -26,6 +26,24 @@
             font-size: 10px;
         }
 
+        .card-pre {
+            font-family: monospace;
+            position: absolute;
+            font-size: 40px;
+            left: -12px;
+            z-index: 10;
+            top: 50px;
+        }
+
+        .card-post {
+            font-family: monospace;
+            position: absolute;
+            font-size: 40px;
+            right: -12px;
+            z-index: 10;
+            top: 50px;
+        }
+
         .card-content .card-last {
             position: absolute;
             top: 2px;
@@ -34,6 +52,7 @@
         }
 
         td {
+            position: relative;
             align-content: baseline;
             padding: 10px;
             border-left: 3px solid #cfcfff;
@@ -59,27 +78,34 @@
             text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas.",
             children: [
                 {
-                    title: "Foo",
+                    title: "Total",
                     author: "Robin",
                     last: "3/31/25 2:54PM",
                     text: "1.1",
                     children: [
                         {
-                            text: "1.1.1"
+                            text: "A",
+                            pre: "(",
+                            post: "+"
                         },
                         {
-                            text: "1.1.2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas.",
+                            text: "B",
+                            post: "+",
                             children: [
                                 {
-                                    text: "1.1.2.1 A"
+                                    text: "1.1.2.1 A",
+                                    pre: "(",
+                                    post: "x"
                                 },
                                 {
-                                    text: "1.1.2.2 B"
+                                    text: "1.1.2.2 B",
+                                    post: ")"
                                 }
                             ]
                         },
                         {
-                            text: "1.1.3",
+                            text: "C",
+                            post: ")",
                             children: [
                                 {
                                     text: "1.1.3.1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas.",
@@ -136,7 +162,19 @@
             card.append(root.text);
             card.classList = "card-content";
             card.style.background = root.color;
+            if (!!root.pre) {
+                let pre = document.createElement("span");
+                pre.classList = "card-pre";
+                pre.textContent = root.pre;
+                cell.append(pre);
+            }
             cell.append(card);
+            if (!!root.post) {
+                let post = document.createElement("span");
+                post.classList = "card-post";
+                post.textContent = root.post;
+                cell.append(post);
+            }
             return cell;
         }
 
