--- a/index.html
+++ b/index.html
@@ -14,34 +14,11 @@
             box-shadow: 2px 2px 5px rgba(0, 0, 0, .6);
         }
 
-        .card-content .card-title {
-            display: block;
-            font-weight: bold;
-        }
-
         .card-content .card-author {
             position: absolute;
             top: 2px;
             left: 2px;
             font-size: 10px;
-        }
-
-        .card-pre {
-            font-family: monospace;
-            position: absolute;
-            font-size: 40px;
-            left: -12px;
-            z-index: 10;
-            top: 50px;
-        }
-
-        .card-post {
-            font-family: monospace;
-            position: absolute;
-            font-size: 40px;
-            right: -12px;
-            z-index: 10;
-            top: 50px;
         }
 
         .card-content .card-last {
@@ -51,20 +28,42 @@
             font-size: 10px;
         }
 
+        table {
+            border-color: #cfcfff;
+        }
+
+        tr {
+            border-color: #cfcfff;
+        }
+
+        td {
+            border-color: #cfcfff;
+        }
+
         td {
             position: relative;
             align-content: baseline;
             padding: 10px;
-            border-left: 3px solid #cfcfff;
-            border-top: 3px solid #cfcfff;
         }
 
-        td:last-of-type {
-            border-right: 3px solid #cfcfff;
+        td:before {
+            font-family: monospace;
+            content: attr(data-before);
+            position: absolute;
+            font-size: 40px;
+            left: -13px;
+            z-index: 10;
+            top: 40px;
         }
 
-        tr:last-of-type td {
-            border-bottom: 3px solid #cfcfff;
+        td:after {
+            font-family: monospace;
+            content: attr(data-after);
+            position: absolute;
+            font-size: 40px;
+            right: -13px;
+            z-index: 10;
+            top: 40px;
         }
     </style>
 </head>
@@ -85,27 +84,27 @@
                     children: [
                         {
                             text: "A",
-                            pre: "(",
-                            post: "+"
+                            before: "(",
+                            after: "+"
                         },
                         {
                             text: "B",
-                            post: "+",
+                            after: "+",
                             children: [
                                 {
                                     text: "1.1.2.1 A",
-                                    pre: "(",
-                                    post: "x"
+                                    before: "(",
+                                    after: "x"
                                 },
                                 {
                                     text: "1.1.2.2 B",
-                                    post: ")"
+                                    after: ")"
                                 }
                             ]
                         },
                         {
                             text: "C",
-                            post: ")",
+                            after: ")",
                             children: [
                                 {
                                     text: "1.1.3.1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat at nunc et egestas.",
@@ -142,38 +141,34 @@
             }
             let card = document.createElement("div");
             if (!!root.author) {
-                let author = document.createElement("span");
+                let author = document.createElement("div");
                 author.classList = "card-author";
                 author.textContent = root.author;
                 card.append(author);
             }
             if (!!root.last) {
-                let last = document.createElement("span");
+                let last = document.createElement("div");
                 last.classList = "card-last";
                 last.textContent = root.last;
                 card.append(last);
             }
             if (!!root.title) {
-                let last = document.createElement("span");
-                last.classList = "card-title";
-                last.textContent = root.title;
-                card.append(last);
+                let titleWrap = document.createElement("div");
+                let title = document.createElement("strong");
+                title.textContent = root.title;
+                card.append(title);
             }
-            card.append(root.text);
+            let textContainer = document.createElement("div");
+            textContainer.textContent = root.text;
+            card.append(textContainer);
             card.classList = "card-content";
             card.style.background = root.color;
-            if (!!root.pre) {
-                let pre = document.createElement("span");
-                pre.classList = "card-pre";
-                pre.textContent = root.pre;
-                cell.append(pre);
-            }
             cell.append(card);
-            if (!!root.post) {
-                let post = document.createElement("span");
-                post.classList = "card-post";
-                post.textContent = root.post;
-                cell.append(post);
+            if (!!root.before) {
+                cell.setAttribute("data-before", root.before);
+            }
+            if (!!root.after) {
+                cell.setAttribute("data-after", root.after);
             }
             return cell;
         }
@@ -201,8 +196,10 @@
 
         function toTable(node) {
             let table = document.createElement("table");
-            table.cellPadding = 0;
+            table.cellPadding = 5;
             table.cellSpacing = 0;
+            table.border = 1;
+            table.bordercolor = "#cfcfff";
             let body = document.createElement("tbody");
             let rows = toRows([node]);
             rows.forEach(r => {
